<resources>
    <string name="app_name">Math Percentage</string>
    <string name="action_settings">Settings</string>
    <string name="enter_percentage">Enter Percentage</string>
    <string name="what_is">what is</string>
    <string name="answer">Answer</string>
    <string name="_0">0</string>
    <string name="enter_number">Enter Number</string>
    <string name="of">of</string>
    <string name="button">Button</string>
</resources>
